media: reference pipeline, real cost settlement, generations console
Non-drama slice of the media/gateway work. Drama Studio changes stay
uncommitted in the working tree.

1. Media reference system (core-ai/media/reference)
   Unified parser/compiler/addressing for reference images across
   providers: MediaReferenceParser / MediaReferenceCompiler /
   MediaPromptAddressing, MediaCapabilityRegistry + MediaModelCapabilities
   describing per-model reference limits, RemoteMediaLoader +
   HttpRemoteMediaLoader for remote fetch. Server side compiles through
   GatewayReferenceCompiler / MediaReferenceResolver /
   GatewayModelReferenceCapabilities, with gateway_model config carrying
   the capability metadata.

2. Real media cost recording and settlement
   MediaPricingService prices image/video jobs from the model catalog,
   MediaCostSettler writes actual cost back onto media_jobs (cost_usd,
   usage) instead of leaving estimates. Provider responses now carry
   usage; new cost + reference indexes migrations.

3. Media job API and Generations console
   New MediaJobWebService (list/detail/content) with
   MediaJobWebServiceImpl and MediaJobContentController; the frontend
   Generations page is rewritten against it, and Traces/Generations are
   grouped under a new Observability nav section.

4. Provider layer rework
   KieMediaProvider split over a dedicated KieTaskClient, reference and
   usage support added to Gemini/OpenAI image providers and
   LiteLLMMediaProvider, GatewayMediaProvider/GatewayMediaHandle extended
   for media handles, GenerateImageTool/GenerateVideoTool/CaptionImageTool
   accept references.

5. Audio provider SPI
   ai.core.media.audio: AudioProvider with TTS/ASR specs and results
   including word timestamps.

6. Preset image skills
   Seven seeded skill docs (camera language, shot language, lighting,
   character/scene/contact sheet, cover poster) with
   SchemaMigrationVPresetSkills.

Also: LLMModelContextRegistry context lookup, self-harnes